--- a/myapp/templates/page/chart-1.html
+++ b/myapp/templates/page/chart-1.html
@@ -101,16 +101,17 @@
                 <div class="layui-card">
                     <!-- <div class="layui-card-header"><i class="fa fa-line-chart icon"></i>报表统计</div> -->
                     <div class="layui-card-body" id="echart_card">
-                        <div id="echarts-records" style="width: 1500px;height:500px"></div>
+                        <div id="echarts-records" style="width: 1800px;height:800px"></div>
                     </div>
                   </div>
             </div>
         </div>
     </div>
 </div>
+<script src="{% static 'js/echarts.min.js'%}"></script>
+<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/world.js"></script>
 <!--引入百度地图的jssdk，这里需要使用你在百度地图开发者平台申请的 ak-->
 <script src="http://api.map.baidu.com/api?v=2.0&ak=t6FhPX8kta44hnWYUb9wN3sam3p2G6AG"></script>
-<script src="{% static 'js/echarts.min.js'%}"></script>
 <!-- 引入百度地图扩展 -->
 <script src="{% static 'js/bmap.min.js'%}"></script>
 <script src="{% static 'lib/layui-v2.5.5/layui.js'%}" charset="utf-8"></script>
@@ -149,7 +150,6 @@
                 submitForm(url,function(json){
                     data = json.data.data;
                     geoCoordMap = json.data.geoCoordMap
-                    getViewPort(geoCoordMap)
                     option.series[0].data=convertData(data);
                     getViewPort(geoCoordMap,option)
                     echartsRecords.setOption(option);
@@ -179,7 +179,7 @@
         });
 
         //获取下拉文件数据
-        $.getJSON("/myapp/api/file/select/c", function(json) {
+        $.getJSON("/myapp/api/file/select/chart1_", function(json) {
             var data = json.data;
             $("#file_select").empty();
             $("#file_select").append($("<option>---请选择文件---</option>"));
@@ -190,20 +190,20 @@
             form.render()
         });
 
-        function genSelect($dom,data,tip){
-            $dom.empty();
-            $dom.append($("<option>---"+tip+"---</option>"));
-            $.each(data, function( key,val ) {
-                var tplInput=$("<option  value='"+val+"'>"+val+"</option>");
-                $dom.append(tplInput);
-            });
-            form.render()
-        }
+        // function genSelect($dom,data,tip){
+        //     $dom.empty();
+        //     $dom.append($("<option>---"+tip+"---</option>"));
+        //     $.each(data, function( key,val ) {
+        //         var tplInput=$("<option  value='"+val+"'>"+val+"</option>");
+        //         $dom.append(tplInput);
+        //     });
+        //     form.render()
+        // }
 
         function genCheckBox($dom,data){
             $dom.empty();
             $.each(data, function( key,val ) {
-                var tplInput=$("<input type='checkbox' name='energy' lay-skin='primary' value="+val+" title="+val+" checked='' />");
+                var tplInput=$("<input type='checkbox' name='energy' lay-skin='primary' lay-filter='energy' value="+val+" title="+val+" checked='' />");
                 $dom.append(tplInput);
             });
             form.render()
@@ -337,7 +337,8 @@
                 option.title.subtext = file_url
                 option.series[0].data=convertData(data);
                 option.visualMap[0].categories = alldata.energys
-                option.visualMap[0].inRange.color = gradientColor('#FFD700','#800000',100,alldata.energys.length);
+                //option.visualMap[0].inRange.color = gradientColor('#FFD700','#800000',100,alldata.energys.length);
+                option.visualMap[0].inRange.color = gradientColor('#800000','#FFFF00',100,alldata.energys.length);
                 getViewPort(geoCoordMap,option)
                 echartsRecords.setOption(option);
             },
@@ -346,21 +347,21 @@
             })
         });
 
-        form.on('select(chart_select)',function(da){
-            var url = '/myapp/api/chart1';
-            submitForm(url,function(json){
-                data = json.data.data;
-                geoCoordMap = json.data.geoCoordMap
-                option.series[0].data=convertData(data);
-                getViewPort(geoCoordMap,option)
-                echartsRecords.setOption(option);
-            },
-            function(json){
-                console.log(json)
-            })
-        })
+        // form.on('select(chart_select)',function(da){
+        //     var url = '/myapp/api/chart1';
+        //     submitForm(url,function(json){
+        //         data = json.data.data;
+        //         geoCoordMap = json.data.geoCoordMap
+        //         option.series[0].data=convertData(data);
+        //         getViewPort(geoCoordMap,option)
+        //         echartsRecords.setOption(option);
+        //     },
+        //     function(json){
+        //         console.log(json)
+        //     })
+        // })
 
-        form.on('checkbox',function(da){
+        form.on('checkbox(energy)',function(da){
             var url = '/myapp/api/chart1';
             submitForm(url,function(json){
                 data = json.data.data;
@@ -449,7 +450,7 @@
         /**
          * 报表功能
          */
-        var echartsRecords = echarts.init(document.getElementById('echarts-records'), 'walden');
+        var echartsRecords = echarts.init(document.getElementById('echarts-records'));
         var data = [];
         alldata = '';
         var geoCoordMap = {};
@@ -502,7 +503,7 @@
             bmap: {
                 center: [104.114129, 37.550339],
                 //mapType: 'china',
-                zoom: 3,// 百度地图缩放等级，数字越大，放大越大，地图比例尺越小
+                zoom: 1,// 百度地图缩放等级，数字越大，放大越大，地图比例尺越小
                 roam: 'move', // 是否开启拖拽缩放，可以只设置 'scale' 或者 'move' true
                 mapStyle: {
                     styleJson: [
@@ -568,7 +569,7 @@
                     type: 'piecewise',
                     dimension: 4,       // series.data 的第四个维度（即 value[3]）被映射
                     categories: [],
-                    orient :'horizontal',
+                    //orient :'horizontal',
                     inRange: {       // 选中范围外的视觉配置
                         color: [],
                         //symbolSize: [300, 1000]
@@ -640,7 +641,7 @@
             width = $("#echart_card").width();
             height = $("#echart_card").height();
             document.getElementById('echarts-records').style.width = width+'px';
-            document.getElementById('echarts-records').style.height = height+'px';
+            //document.getElementById('echarts-records').style.height = height+'px';
         };
         window.onresize = function(){
             resizeEchartContainer(); 
